# TurboRivals

./: .gitignore  CMakeLists.txt
assets/environments/: 3d_skybox_montain__game-ready.glb
assets/models/: 1969_dodge_charger_rt_gt2psx_style.glb  porsche_911_carrera_993_gt2psx_style_v2.glb  ps1_gt1-style_model_-_1992_emery_aventus.glb  ps1_gt1-style_model_-_1994_kineto_rm-x.glb  ps1_gt1-style_model_-_1996_horai_bx300.glb
assets/tracks/: race_track__low_poly_v2.glb
include/App/: Application.hpp
include/Core/: Body.hpp  Car.hpp  CarMovement.hpp  CarPhysicsComponent.hpp  CollisionMeshData.hpp  Environment.hpp  EnvironmentID.hpp  GameWorld.hpp  Input.hpp  ModelComponent.hpp  ModelID.hpp  Physics.hpp  Track.hpp  TrackCollisionComponent.hpp  Transform3D.hpp  VehiclePhysicsComponent.hpp
include/Network/: Client.hpp  ENet.hpp  IClient.hpp  INetworkListener.hpp  INetworkNode.hpp  IServer.hpp  NetworkManager.hpp  NetworkStatus.hpp  PacketType.hpp  Server.hpp
include/Render/: CarCamera.hpp  CarRenderer.hpp  Level.hpp  LevelRenderer.hpp  RenderSystem.hpp  ResourceManager.hpp
include/Sound/: SoundID.hpp  SoundManager.hpp
include/UI/: Input.hpp  InputManager.hpp  Window.hpp
src/: CMakeLists.txt  main.cpp
src/App/: Application.cpp
src/Core/: CarPhysicsComponent.cpp  GameWorld.cpp  Physics.cpp  TrackCollisionComponent.cpp  VehiclePhysicsComponent.cpp
src/Network/: Client.cpp  ENet.cpp  NetworkManager.cpp  Server.cpp
src/Render/: CarCamera.cpp  CarRenderer.cpp  Level.cpp  LevelRenderer.cpp  RenderSystem.cpp  ResourceManager.cpp
src/Sound/: SoundManager.cpp
src/UI/: InputManager.cpp  Window.cpp
